--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,6 @@
   </head>
   <body style="background-image: url('img/fon.jpg'); background-size: cover">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="display: flex; justify-content: center;"></div>
+    <div id="root" style="display: flex; flex-direction: column; max-width: 800px; margin-left: auto; margin-right: auto;"></div>
   </body>
 </html>
