--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <title>DICOM TEAM</title>
   </head>
-  <body style="background-image: url('img/fon2.jpg'); background-size: cover; height: 100vh;">
+  <body style="background-image: url('img/fonBG.png'); background-size: cover; height: 100vh;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" style="display: flex; flex-direction: column; max-width: 800px; margin-left: auto; margin-right: auto;"></div>
   </body>
