--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,6 @@
   </head>
   <body style="background-image: url('img/fonBG.png'); background-size: cover; height: 100vh;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="display: flex; flex-direction: column; padding-left: 10%; padding-right: 10%; margin-left: auto; margin-right: auto;"></div>
+    <div id="root"></div>
   </body>
 </html>
