--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,31 @@
     <!-- https://itchief.ru/bootstrap/installation -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="icon" href="https://dicom.team/favicon.ico" type="image/x-icon">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
   </head>
+
 <!--  <body style="background-image: url('/images/fonBG.png'); background-size: cover; height: 100vh;">-->
-  <body style="background-image: url('/images/fon2.jpg'); background-size: cover; height: 100vh;">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="background" style="position: fixed; z-index: 1;"></div>
   </body>
+  <script>
+    VANTA.FOG({
+      el: "#background",
+      mouseControls: true,
+      touchControls: true,
+      gyroControls: false,
+      minHeight: 200.00,
+      minWidth: 200.00,
+      highlightColor: 0xa4ff,
+      midtoneColor: 0x9ac9fc,
+      lowlightColor: 0xc8e1f5,
+      baseColor: 0xffffff,
+      blurFactor: 0.35,
+      speed: 0.20,
+      zoom: 0.20
+    })
+  </script>
 </html>
